# nymstr-app

./: .gitignore  Cargo.toml  FRONTEND_PLAN.md  INTEGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  Build.md  ChatFlows.md  Protocol.md  README.md  SystemOverview.md
docs/components/: CLI.md  CORE.md  CRYPTO.md  MODEL.md  UI.md
src/: App.tsx  app.rs  cli.rs  lib.rs  log_buffer.rs  main.rs  test_pgp.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  connection.rs  contacts.rs  groups.rs  invites.rs  messaging.rs  mod.rs
src-tauri/src/core/: message_router.rs  messages.rs  mixnet_client.rs  mixnet_traits.rs  mod.rs
src-tauri/src/core/db/: contacts.rs  group.rs  messages.rs  mls.rs  mod.rs  schema.rs  user.rs
src-tauri/src/core/message_handler/: auth.rs  direct.rs  group.rs  mod.rs  welcome.rs
src-tauri/src/crypto/: mod.rs  utils.rs
src-tauri/src/crypto/mls/: client.rs  conversation_manager.rs  epoch_buffer.rs  key_packages.rs  mod.rs  types.rs
src-tauri/src/crypto/pgp/: keypair.rs  mod.rs  signing.rs
src-tauri/src/events/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tasks/: buffer_processor.rs  connection_monitor.rs  message_loop.rs  mod.rs  pending_poller.rs
src-tauri/src/test_utils/: builders.rs  db_setup.rs  mls_test_factory.rs  mock_mixnet.rs  mod.rs  pgp_test_keys.rs  time_control.rs
src-tauri/src/types/: mod.rs
src-tauri/tests/: e2e_scenarios.rs  epoch_buffer.rs  group_lifecycle.rs  group_operations.rs  mls_conversation.rs  welcome_flow.rs
src-tauri/tests/common/: mod.rs
src/cli/: commands.rs  key_manager.rs  mod.rs
src/components/: ErrorBoundary.tsx
src/components/auth/: AuthView.tsx
src/components/chat/: ChatWindow.tsx  GroupChatWindow.tsx  GroupMemberList.tsx  Message.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  MessageStatus.tsx
src/components/layout/: Sidebar.tsx
src/components/modals/: BaseModal.tsx  GroupDiscoveryModal.tsx  NewChatModal.tsx  index.ts
src/components/panels/: ContactProfilePanel.tsx  PendingWelcomesPanel.tsx  SettingsPanel.tsx  index.ts
src/components/ui/: Avatar.tsx  Button.tsx  ConnectionStatus.tsx  Input.tsx  ProgressStepper.tsx  Toast.tsx
src/core/: auth_handler.rs  chat_handler.rs  crypto.rs  db.rs  key_manager.rs  message_handler.rs  message_router.rs  messages.rs  mixnet_client.rs  mod.rs
src/core/db/: contacts.rs  group.rs  messages.rs  mls.rs  mod.rs  user.rs
src/core/message_handler/: auth.rs  buffer.rs  direct.rs  group.rs  mls.rs  mod.rs  welcome.rs
src/crypto/: message_crypto.rs  mod.rs  utils.rs
src/crypto/mls/: basic_test.rs  client.rs  client_old.rs  client_simple.rs  conversation_manager.rs  epoch_buffer.rs  integration_test.rs  key_packages.rs  mod.rs  persistence.rs  storage_old.rs  test_client.rs  test_storage.rs  types.rs
src/crypto/pgp/: keypair.rs  mod.rs  signing.rs
src/event/: mod.rs  navigation.rs
src/hooks/: useAppEvents.ts  useGroupJoin.ts  useMessageSend.ts  useMessages.ts  useNewConversation.ts  useToast.ts
src/model/: contact.rs  message.rs  mod.rs  user.rs
src/screen/: chat.rs  mod.rs
src/services/: api.ts  events.ts
src/stores/: authStore.ts  chatStore.ts  connectionStore.ts  groupStore.ts  toastStore.ts
src/styles/: globals.css
src/types/: index.ts
src/ui/: layout.rs  mod.rs
src/ui/components/: chat.rs  footer.rs  mod.rs
src/ui/widgets/: input.rs  splash.rs
