[package]
name = "nymstr"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
color-eyre = "0.6"

# core dependencies for mixnet client
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
once_cell = "1.17"
base64 = "0.21"
hex = "0.4"
openssl = "0.10"
hkdf = "0.12"
sha2 = "0.10"
# Crypto utilities: derive AES key via HKDF-SHA256 rather than plain SHA256(salt||secret)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
 fastrand = "1.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
rusqlite = "0.32"
pgp = "0.16"
# Security dependencies
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
rand = "0.8"
libc = "0.2"
# MLS dependencies
mls-rs = { version = "0.51.0", features = ["sqlite"] }
mls-rs-core = "0.24.0"
mls-rs-crypto-openssl = "0.18.0"
mls-rs-provider-sqlite = "0.19.0"
async-trait = "0.1"
ed25519-zebra = { version = "*", features = ["alloc"] }
# removed tachyonfx
#[removed] rand_core = "0.6"
#[removed] ring = "0.16"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
